# vkquality

./: README.md
list_editor/: README.md
list_editor/editor_project/: vkqlisteditor.sln
list_editor/editor_project/unitest_editor/: EditorUnitTests.cs  Usings.cs  testdata_devicelist.csv  testdata_driverfingerprint.csv  testdata_gpulist.csv  unitest_editor.csproj
list_editor/editor_project/vkqlisteditor/: vkqlisteditor.csproj
list_editor/editor_project/vkqlisteditor/editor/: AarTemplate.cs  CsvConstants.cs  DeviceAllowListRecord.cs  DeviceFilter.cs  DeviceListCsvImporter.cs  DeviceListExport.cs  DeviceListProject.cs  DeviceRecord.cs  DeviceStringSorter.cs  DriverFingerprintCsvImporter.cs  DriverFingerprintExport.cs  DriverFingerprintRecord.cs  EditNumberDialog.cs  EditorGuiElements.cs  EditorWindow.cs  GpuListCsvImporter.cs  GpuListExport.cs  GpuPredictRecord.cs  MenuCommands.cs  NewProjectDefaults.cs  PlayDevicesCsvImporter.cs  Program.cs  RuntimeData.cs  RuntimeDataExporter.cs  StringTable.cs  UserPreferences.cs
list_editor/example_data/: device_list.csv  driver_allow.csv  driver_deny.csv  gpu_allow.csv  gpu_deny.csv  vkqualitydata.json
sample_project/Assets/: GraphicsAPI.cs
sample_project/Assets/Plugins/Android/: AndroidManifest.xml  VkQualityTestActivity.java
sample_project/Assets/Scenes/: SampleScene.unity
sample_project/ProjectSettings/: ProjectSettings.asset
vkq_library/: build.gradle.kts  gradle.properties  settings.gradle.kts
vkq_library/gradle/wrapper/: gradle-wrapper.properties
vkq_library/vkquality/: build.gradle.kts
vkq_library/vkquality/src/androidTest/java/com/google/android/games/vkquality/: VkQualityUnitTests.kt
vkq_library/vkquality/src/main/: AndroidManifest.xml
vkq_library/vkquality/src/main/assets/: vkqualitydata.vkq
vkq_library/vkquality/src/main/cpp/: CMakeLists.txt  gles_util.cpp  gles_util.h  vkquality.h  vkquality_c.cpp  vkquality_device_info.h  vkquality_file_format.h  vkquality_file_manager.h  vkquality_manager.cpp  vkquality_manager.h  vkquality_matching.cpp  vkquality_matching.h  vkquality_prediction_file.cpp  vkquality_prediction_file.h  vkquality_tests.cpp  vulkan_util.cpp  vulkan_util.h
vkq_library/vkquality/src/main/java/com/google/android/games/vkquality/: DeviceMitigationRecord.java  SecurityPatchDate.java  StartupMitigation.java  StartupMitigationRecord.java  VKQuality.java
vkq_library/vkquality/src/test/java/com/google/android/games/vkquality/: ExampleUnitTest.java  VkQualityJavaTests.java
